feat: add lazy image load

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
               src="./assets/img/fisinius-cover.webp"
               class="works__project-image"
               alt="Fisiniús"
+              loading="lazy"
             />
           </article>
 
@@ -114,6 +115,7 @@
               src="./assets/img/hacker-news-cover.webp"
               class="works__project-image"
               alt="Artemis"
+              loading="lazy"
             />
           </article>
 
@@ -123,6 +125,7 @@
               src="./assets/img/artemis-cover.webp"
               class="works__project-image"
               alt="Artemis"
+              loading="lazy"
             />
           </article>
         </div>
