--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
     </header>
 
     <!-- MAIN CONTENT -->
-    <main class="container main-page">
+    <main class="main-page">
       <!-- INTRO -->
-      <section id="intro" class="intro">
+      <section id="intro" class="container intro">
         <h1 class="intro__presentation">¡Hola!, soy Sebastian</h1>
         <span class="intro__closure">Y soy un desarrollador frontend</span>
       </section>
 
       <!-- WORKS -->
-      <section id="works">
+      <section id="works" class="container">
         <h2>Mis proyectos</h2>
 
         <div class="works__projects">
@@ -144,50 +144,54 @@
 
       <!-- ACERCA DE MÍ -->
       <section id="about" class="about">
-        <h2>Acerca de mí</h2>
+        <div class="container">
+          <h2>Acerca de mí</h2>
 
-        <p>
-          ¡Encantado de conocerte! Soy Sebastian Vargas y me desenvuelvo como
-          desarrollador frontend con experiencia en varios proyectos utilizando
-          Angular y conceptos de diseño web. Actualmente, estoy estudiando la
-          carrera de Ingeniería de Software en la
-          <abbr title="Universidad Nacional Mayor de San Marcos">UNMSM</abbr>.
-        </p>
+          <p>
+            ¡Encantado de conocerte! Soy Sebastian Vargas y me desenvuelvo como
+            desarrollador frontend con experiencia en varios proyectos
+            utilizando Angular y conceptos de diseño web. Actualmente, estoy
+            estudiando la carrera de Ingeniería de Software en la
+            <abbr title="Universidad Nacional Mayor de San Marcos">UNMSM</abbr>.
+          </p>
+        </div>
 
         <div class="about__parallax"></div>
+        
+        <div class="container">
+          <p>
+            He trabajado anteriormente como diseñador UX, realizando varios
+            proyectos con alta eficacia y aprobación en cuanto al diseño de
+            interfaces y marca. Aprobación que agradezco también al trabajo
+            conjunto con las personas que conformé equipos para llevar a cabo
+            estos objetivos.
+          </p>
 
-        <p>
-          He trabajado anteriormente como diseñador UX, realizando varios
-          proyectos con alta eficacia y aprobación en cuanto al diseño de
-          interfaces y marca. Aprobación que agradezco también al trabajo
-          conjunto con las personas que conformé equipos para llevar a cabo
-          estos objetivos.
-        </p>
+          <p>
+            Existen varios factores para que un proyecto pueda tener alto ratio
+            de éxito. Para mí, los componentes son sencillos: Comunicación,
+            seguridad, empatía, determinación, y último pero no menos
+            importante, el tratar de que el liderazgo sea el mejor posible.
+          </p>
 
-        <p>
-          Existen varios factores para que un proyecto pueda tener alto ratio de
-          éxito. Para mí, los componentes son sencillos: Comunicación,
-          seguridad, empatía, determinación, y último pero no menos importante,
-          el tratar de que el liderazgo sea el mejor posible.
-        </p>
+          <p>
+            Dicho sea de paso, también he realizado varios proyectos fuera de la
+            programación. Un ejemplo es mi libro <em>Sentimientos</em> que ya
+            está a la venta. Si deseas tener una lectura interesante, te animo a
+            que lo compres. No te decepcionarás.
+          </p>
 
-        <p>
-          Dicho sea de paso, también he realizado varios proyectos fuera de la
-          programación. Un ejemplo es mi libro <em>Sentimientos</em> que ya está
-          a la venta. Si deseas tener una lectura interesante, te animo a que lo
-          compres. No te decepcionarás.
-        </p>
-
-        <p>
-          Me apasiona el viajar. He realizado un voluntariado internacional
-          trabajando con las ODS. Tengo comunicación en inglés.
-        </p>
+          <p>
+            Me apasiona el viajar. He realizado un voluntariado internacional
+            trabajando con las ODS. Tengo comunicación en inglés.
+          </p>
+        </div>
       </section>
 
       <hr />
 
       <!-- CONTACTO -->
-      <section id="contact" class="contact">
+      <section id="contact" class="container contact">
         <h2>Let's get in touch!</h2>
 
         <p>
