--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="Sebastian Vargas Pizango" />
     <link
       rel="shortcut icon"
-      href="./assets/img/logo.svg"
+      href="./assets/img/favicon.svg"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="./assets/css/normalize.css" />
