feat: add responsive styles

--- a/project-fisinius.html
+++ b/project-fisinius.html
@@ -150,7 +150,7 @@
 
         <div class="technical-sheet__technologies">
           <!-- Lista de tecnologías usadas -->
-          <div class="technical-sheet__stack">
+          <div class="container technical-sheet__stack">
             <figure class="technical-sheet__figure">
               <img
                 class="technical-sheet__figure-image"
@@ -200,6 +200,7 @@
             <a
               class="project-resources__resource-link"
               href="https://github.com/sebas-tcotd/fisinius"
+              target="_blank"
             >
               <img
                 class="project-resources__resource-image"
@@ -218,13 +219,14 @@
             <a
               class="project-resources__resource-link"
               href="https://fisinius.netlify.app"
+              target="_blank"
             >
               <span
                 class="material-icons-sharp project-resources__resource-image"
               >
                 newspaper
               </span>
-              <p class="project-resources__resource-description">Ver la demo</p>
+              <p class="project-resources__resource-description">Experimenta la demo</p>
             </a>
           </li>
         </ul>
